ingress/ngnix-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: helo.pavan-devops.cloud
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: hello-world-one
            port:
              number: 80
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: hello-world-two
            port:
              number: 80
